gramaticaParser.java
// Generated from gramatica.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, OPERADORES_LOGICOS=17, 
		INCREMENTO=18, FIM_SENTENCA=19, COMPARACAO=20, ATRIBUICAO=21, OPERADOR_AD=22, 
		OPERADOR_MUL=23, TIPO_DIG=24, VISIBILIDADE=25, ID=26, NUMERO=27, WS=28;
	public static final int
		RULE_inicio = 0, RULE_exp = 1, RULE_metodo_main = 2, RULE_exp_metodo = 3, 
		RULE_conjunto_declare = 4, RULE_declare_var = 5, RULE_tipo_retorno = 6, 
		RULE_exp_for = 7, RULE_declare_var_atri = 8, RULE_exp_comparacao = 9, 
		RULE_exp_incremento = 10, RULE_exp_alteracao = 11, RULE_exp_while = 12, 
		RULE_exp_if = 13, RULE_operacao = 14, RULE_termo = 15, RULE_numero_id = 16;
	public static final String[] ruleNames = {
		"inicio", "exp", "metodo_main", "exp_metodo", "conjunto_declare", "declare_var", 
		"tipo_retorno", "exp_for", "declare_var_atri", "exp_comparacao", "exp_incremento", 
		"exp_alteracao", "exp_while", "exp_if", "operacao", "termo", "numero_id"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'class'", "'{'", "'}'", "'public static void main'", "'(String args [])'", 
		"'(String [] args)'", "'('", "')'", "','", "'void'", "'for'", "'){'", 
		"'while ('", "'if ('", "'else'", "'else {'", null, null, "';'", null, 
		"'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "OPERADORES_LOGICOS", "INCREMENTO", "FIM_SENTENCA", 
		"COMPARACAO", "ATRIBUICAO", "OPERADOR_AD", "OPERADOR_MUL", "TIPO_DIG", 
		"VISIBILIDADE", "ID", "NUMERO", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InicioContext extends ParserRuleContext {
		public TerminalNode VISIBILIDADE() { return getToken(gramaticaParser.VISIBILIDADE, 0); }
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			setState(42);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				match(VISIBILIDADE);
				setState(35);
				match(T__0);
				setState(36);
				match(ID);
				setState(37);
				match(T__1);
				setState(38);
				exp();
				setState(39);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				exp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public List<Exp_alteracaoContext> exp_alteracao() {
			return getRuleContexts(Exp_alteracaoContext.class);
		}
		public Exp_alteracaoContext exp_alteracao(int i) {
			return getRuleContext(Exp_alteracaoContext.class,i);
		}
		public List<Exp_metodoContext> exp_metodo() {
			return getRuleContexts(Exp_metodoContext.class);
		}
		public Exp_metodoContext exp_metodo(int i) {
			return getRuleContext(Exp_metodoContext.class,i);
		}
		public List<Declare_varContext> declare_var() {
			return getRuleContexts(Declare_varContext.class);
		}
		public Declare_varContext declare_var(int i) {
			return getRuleContext(Declare_varContext.class,i);
		}
		public List<Exp_incrementoContext> exp_incremento() {
			return getRuleContexts(Exp_incrementoContext.class);
		}
		public Exp_incrementoContext exp_incremento(int i) {
			return getRuleContext(Exp_incrementoContext.class,i);
		}
		public List<Exp_whileContext> exp_while() {
			return getRuleContexts(Exp_whileContext.class);
		}
		public Exp_whileContext exp_while(int i) {
			return getRuleContext(Exp_whileContext.class,i);
		}
		public List<Exp_ifContext> exp_if() {
			return getRuleContexts(Exp_ifContext.class);
		}
		public Exp_ifContext exp_if(int i) {
			return getRuleContext(Exp_ifContext.class,i);
		}
		public List<Exp_forContext> exp_for() {
			return getRuleContexts(Exp_forContext.class);
		}
		public Exp_forContext exp_for(int i) {
			return getRuleContext(Exp_forContext.class,i);
		}
		public List<Declare_var_atriContext> declare_var_atri() {
			return getRuleContexts(Declare_var_atriContext.class);
		}
		public Declare_var_atriContext declare_var_atri(int i) {
			return getRuleContext(Declare_var_atriContext.class,i);
		}
		public List<OperacaoContext> operacao() {
			return getRuleContexts(OperacaoContext.class);
		}
		public OperacaoContext operacao(int i) {
			return getRuleContext(OperacaoContext.class,i);
		}
		public List<TerminalNode> FIM_SENTENCA() { return getTokens(gramaticaParser.FIM_SENTENCA); }
		public TerminalNode FIM_SENTENCA(int i) {
			return getToken(gramaticaParser.FIM_SENTENCA, i);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitExp(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(55);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(44);
					exp_alteracao();
					}
					break;
				case 2:
					{
					setState(45);
					exp_metodo();
					}
					break;
				case 3:
					{
					setState(46);
					declare_var();
					}
					break;
				case 4:
					{
					setState(47);
					exp_incremento();
					}
					break;
				case 5:
					{
					setState(48);
					exp_while();
					}
					break;
				case 6:
					{
					setState(49);
					exp_if();
					}
					break;
				case 7:
					{
					setState(50);
					exp_for();
					}
					break;
				case 8:
					{
					setState(51);
					declare_var_atri();
					}
					break;
				case 9:
					{
					setState(52);
					operacao(0);
					setState(53);
					match(FIM_SENTENCA);
					}
					break;
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__6) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << TIPO_DIG) | (1L << VISIBILIDADE) | (1L << ID) | (1L << NUMERO))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Metodo_mainContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Metodo_mainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metodo_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterMetodo_main(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitMetodo_main(this);
		}
	}

	public final Metodo_mainContext metodo_main() throws RecognitionException {
		Metodo_mainContext _localctx = new Metodo_mainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_metodo_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(T__3);
			setState(60);
			_la = _input.LA(1);
			if ( !(_la==T__4 || _la==T__5) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(61);
			match(T__1);
			setState(62);
			exp();
			setState(63);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_metodoContext extends ParserRuleContext {
		public TerminalNode VISIBILIDADE() { return getToken(gramaticaParser.VISIBILIDADE, 0); }
		public Tipo_retornoContext tipo_retorno() {
			return getRuleContext(Tipo_retornoContext.class,0);
		}
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Conjunto_declareContext conjunto_declare() {
			return getRuleContext(Conjunto_declareContext.class,0);
		}
		public Metodo_mainContext metodo_main() {
			return getRuleContext(Metodo_mainContext.class,0);
		}
		public Exp_metodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_metodo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterExp_metodo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitExp_metodo(this);
		}
	}

	public final Exp_metodoContext exp_metodo() throws RecognitionException {
		Exp_metodoContext _localctx = new Exp_metodoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_exp_metodo);
		int _la;
		try {
			setState(78);
			switch (_input.LA(1)) {
			case VISIBILIDADE:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				match(VISIBILIDADE);
				setState(66);
				tipo_retorno();
				setState(67);
				match(ID);
				setState(68);
				match(T__6);
				setState(70);
				_la = _input.LA(1);
				if (_la==TIPO_DIG) {
					{
					setState(69);
					conjunto_declare();
					}
				}

				setState(72);
				match(T__7);
				setState(73);
				match(T__1);
				setState(74);
				exp();
				setState(75);
				match(T__2);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				metodo_main();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Conjunto_declareContext extends ParserRuleContext {
		public Declare_varContext declare_var() {
			return getRuleContext(Declare_varContext.class,0);
		}
		public Conjunto_declareContext conjunto_declare() {
			return getRuleContext(Conjunto_declareContext.class,0);
		}
		public Conjunto_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjunto_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterConjunto_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitConjunto_declare(this);
		}
	}

	public final Conjunto_declareContext conjunto_declare() throws RecognitionException {
		Conjunto_declareContext _localctx = new Conjunto_declareContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conjunto_declare);
		try {
			setState(85);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				declare_var();
				setState(81);
				match(T__8);
				setState(82);
				conjunto_declare();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				declare_var();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_varContext extends ParserRuleContext {
		public TerminalNode TIPO_DIG() { return getToken(gramaticaParser.TIPO_DIG, 0); }
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode FIM_SENTENCA() { return getToken(gramaticaParser.FIM_SENTENCA, 0); }
		public Declare_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterDeclare_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitDeclare_var(this);
		}
	}

	public final Declare_varContext declare_var() throws RecognitionException {
		Declare_varContext _localctx = new Declare_varContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declare_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(TIPO_DIG);
			setState(88);
			match(ID);
			setState(90);
			_la = _input.LA(1);
			if (_la==FIM_SENTENCA) {
				{
				setState(89);
				match(FIM_SENTENCA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_retornoContext extends ParserRuleContext {
		public TerminalNode TIPO_DIG() { return getToken(gramaticaParser.TIPO_DIG, 0); }
		public Tipo_retornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_retorno; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterTipo_retorno(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitTipo_retorno(this);
		}
	}

	public final Tipo_retornoContext tipo_retorno() throws RecognitionException {
		Tipo_retornoContext _localctx = new Tipo_retornoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipo_retorno);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !(_la==T__9 || _la==TIPO_DIG) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_forContext extends ParserRuleContext {
		public Declare_var_atriContext declare_var_atri() {
			return getRuleContext(Declare_var_atriContext.class,0);
		}
		public Exp_comparacaoContext exp_comparacao() {
			return getRuleContext(Exp_comparacaoContext.class,0);
		}
		public TerminalNode FIM_SENTENCA() { return getToken(gramaticaParser.FIM_SENTENCA, 0); }
		public Exp_incrementoContext exp_incremento() {
			return getRuleContext(Exp_incrementoContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Exp_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterExp_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitExp_for(this);
		}
	}

	public final Exp_forContext exp_for() throws RecognitionException {
		Exp_forContext _localctx = new Exp_forContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exp_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__10);
			setState(95);
			match(T__6);
			setState(96);
			declare_var_atri();
			setState(97);
			exp_comparacao();
			setState(98);
			match(FIM_SENTENCA);
			setState(99);
			exp_incremento();
			setState(100);
			match(T__11);
			setState(101);
			exp();
			setState(102);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_var_atriContext extends ParserRuleContext {
		public TerminalNode TIPO_DIG() { return getToken(gramaticaParser.TIPO_DIG, 0); }
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode ATRIBUICAO() { return getToken(gramaticaParser.ATRIBUICAO, 0); }
		public TerminalNode FIM_SENTENCA() { return getToken(gramaticaParser.FIM_SENTENCA, 0); }
		public Numero_idContext numero_id() {
			return getRuleContext(Numero_idContext.class,0);
		}
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public Declare_var_atriContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_var_atri; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterDeclare_var_atri(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitDeclare_var_atri(this);
		}
	}

	public final Declare_var_atriContext declare_var_atri() throws RecognitionException {
		Declare_var_atriContext _localctx = new Declare_var_atriContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declare_var_atri);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TIPO_DIG);
			setState(105);
			match(ID);
			setState(106);
			match(ATRIBUICAO);
			setState(109);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(107);
				numero_id();
				}
				break;
			case 2:
				{
				setState(108);
				operacao(0);
				}
				break;
			}
			setState(111);
			match(FIM_SENTENCA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_comparacaoContext extends ParserRuleContext {
		public List<Numero_idContext> numero_id() {
			return getRuleContexts(Numero_idContext.class);
		}
		public Numero_idContext numero_id(int i) {
			return getRuleContext(Numero_idContext.class,i);
		}
		public TerminalNode COMPARACAO() { return getToken(gramaticaParser.COMPARACAO, 0); }
		public Exp_comparacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_comparacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterExp_comparacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitExp_comparacao(this);
		}
	}

	public final Exp_comparacaoContext exp_comparacao() throws RecognitionException {
		Exp_comparacaoContext _localctx = new Exp_comparacaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_exp_comparacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			numero_id();
			setState(114);
			match(COMPARACAO);
			setState(115);
			numero_id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_incrementoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode INCREMENTO() { return getToken(gramaticaParser.INCREMENTO, 0); }
		public TerminalNode FIM_SENTENCA() { return getToken(gramaticaParser.FIM_SENTENCA, 0); }
		public Exp_incrementoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_incremento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterExp_incremento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitExp_incremento(this);
		}
	}

	public final Exp_incrementoContext exp_incremento() throws RecognitionException {
		Exp_incrementoContext _localctx = new Exp_incrementoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_exp_incremento);
		try {
			setState(122);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(ID);
				setState(118);
				match(INCREMENTO);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				match(ID);
				setState(120);
				match(INCREMENTO);
				setState(121);
				match(FIM_SENTENCA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_alteracaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(gramaticaParser.ID, 0); }
		public TerminalNode ATRIBUICAO() { return getToken(gramaticaParser.ATRIBUICAO, 0); }
		public TerminalNode FIM_SENTENCA() { return getToken(gramaticaParser.FIM_SENTENCA, 0); }
		public Numero_idContext numero_id() {
			return getRuleContext(Numero_idContext.class,0);
		}
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public Exp_alteracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_alteracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterExp_alteracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitExp_alteracao(this);
		}
	}

	public final Exp_alteracaoContext exp_alteracao() throws RecognitionException {
		Exp_alteracaoContext _localctx = new Exp_alteracaoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_exp_alteracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(ID);
			setState(125);
			match(ATRIBUICAO);
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(126);
				numero_id();
				}
				break;
			case 2:
				{
				setState(127);
				operacao(0);
				}
				break;
			}
			setState(130);
			match(FIM_SENTENCA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_whileContext extends ParserRuleContext {
		public List<Exp_comparacaoContext> exp_comparacao() {
			return getRuleContexts(Exp_comparacaoContext.class);
		}
		public Exp_comparacaoContext exp_comparacao(int i) {
			return getRuleContext(Exp_comparacaoContext.class,i);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode OPERADORES_LOGICOS() { return getToken(gramaticaParser.OPERADORES_LOGICOS, 0); }
		public Exp_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterExp_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitExp_while(this);
		}
	}

	public final Exp_whileContext exp_while() throws RecognitionException {
		Exp_whileContext _localctx = new Exp_whileContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_exp_while);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(T__12);
			setState(133);
			exp_comparacao();
			setState(136);
			_la = _input.LA(1);
			if (_la==OPERADORES_LOGICOS) {
				{
				setState(134);
				match(OPERADORES_LOGICOS);
				setState(135);
				exp_comparacao();
				}
			}

			setState(138);
			match(T__11);
			setState(139);
			exp();
			setState(140);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_ifContext extends ParserRuleContext {
		public List<Exp_comparacaoContext> exp_comparacao() {
			return getRuleContexts(Exp_comparacaoContext.class);
		}
		public Exp_comparacaoContext exp_comparacao(int i) {
			return getRuleContext(Exp_comparacaoContext.class,i);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode OPERADORES_LOGICOS() { return getToken(gramaticaParser.OPERADORES_LOGICOS, 0); }
		public Exp_ifContext exp_if() {
			return getRuleContext(Exp_ifContext.class,0);
		}
		public Exp_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterExp_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitExp_if(this);
		}
	}

	public final Exp_ifContext exp_if() throws RecognitionException {
		Exp_ifContext _localctx = new Exp_ifContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_exp_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__13);
			setState(143);
			exp_comparacao();
			setState(146);
			_la = _input.LA(1);
			if (_la==OPERADORES_LOGICOS) {
				{
				setState(144);
				match(OPERADORES_LOGICOS);
				setState(145);
				exp_comparacao();
				}
			}

			setState(148);
			match(T__11);
			setState(149);
			exp();
			setState(150);
			match(T__2);
			setState(153);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(151);
				match(T__14);
				setState(152);
				exp_if();
				}
			}

			setState(159);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
